# esp_tinyusb_audio

./: CMakeLists.txt  Kconfig  README.md
additions/include/: tusb_audio.h  tusb_cdc_acm.h  tusb_config.h
additions/src/: tinyusb.c  tusb_audio.c  tusb_cdc_acm.c  tusb_tasks.c  usb_descriptors.c
